--- a/vues/inscription.phtml
+++ b/vues/inscription.phtml
@@ -1,7 +1,7 @@
 <?php ob_start(); ?>
 
-    <div class="mx-auto mt-5 w-25 border border-2 border-dark bg-info p-5 rounded-3">
-        <h2 class="text-uppercase text-center text-info fs-1 fw-bold fst-italic bg-dark"  >Inscription</h2>
+    <div class="container card mx-auto d-block text-white bg-dark my-5" style="width: 30%;">
+        <h2 class="text-center text-info text-uppercase fs-1 fst-italic fw-bold">Inscription</h2>
 
         <form  method="post" >
             
@@ -24,7 +24,7 @@
 
             <br>
         
-                <input type="submit" class="btn btn-primary fw-bold fs-2 fst-italic">
+                <input type="submit" class="btn btn-outline-secondary mb-3">
         </form>    
     </div>
 
