--- a/vues/connexion.phtml
+++ b/vues/connexion.phtml
@@ -1,22 +1,22 @@
 <?php ob_start(); ?>
  
-    <div class="mx-auto mt-5 w-25 border border-2 border-dark p-5 bg-info rounded-3">       
-        <h2 class="text-center text-info text-uppercase fs-1 fst-italic fw-bold bg-dark">Connexion</h2>
+    <div class="container card mx-auto d-block text-white bg-dark my-5" style="width: 30%;">       
+        <h2 class="text-center text-info text-uppercase fs-1 fst-italic fw-bold">Connexion</h2>
         <form action="" method="post">
             <div class="form-group">
-                <label for="" class="fs-2 fw-bold fst-italic">Login</label>
+                <label for="" class="fs-2 fw-bold fst-italic">Login :</label>
                 <input type="text" name="login" class="form-control" > 
             </div>
             <div class="form-group">
-                <label for="" class="fs-2 fw-bold fst-italic text-capitalize">Mot de passe</label>
+                <label for="" class="fs-2 fw-bold fst-italic text-capitalize">Mot de passe :</label>
                 <input type="password" name="mdp" class="form-control" > 
             </div>
             <br>
-            <input type="submit" class="btn btn-primary fw-bold fs-2 fst-italic">
+            <input type="submit" class="btn btn-outline-secondary mb-3">
         </form>
 
     </div> 
     
 <?php $content = ob_get_clean();
 
-    include "vues/template.phtml";  
+    include "vues/template.phtml";
