--- a/vues/template.phtml
+++ b/vues/template.phtml
@@ -4,62 +4,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/bootstrap.min.css" />
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <title>MyBlog</title>
-    <style>
-        .topnav a:hover {
-                            background-color: #ddd;
-                            color: black;
-                        }
-
-    .btn-c, .btn-s{
-      padding: 25px 15px;
-      color: white;
-      border-radius: 40px;
-      width: 400px;
-      font: bold 30px Georgia;
-      box-shadow: 2px 2px 2px white;
-      text-transform: uppercase;
-
-  }  
-  
-  .btn-s{
-      background-color: #0d6efd;
-  }
-
-  .btn-c{
-      background-color: #20c997;
-  }
-  
- 
-    </style>
+    
 </head>
 <body>
     
-    <header class="bg-dark p-5 text-white border border-0 border-bottom border-info border-5 mb-2 topnav">
-        <h1 class="text-center text-uppercase text-primary fs-1 fst-italic fw-bold">
-            <a href="."><i class="fas fa-microphone"></i>Encore un blog</a> 
-        </h1>
-        <?php if( !empty($_SESSION['auteur'])): ?>
-            <nav class=" fs-1 fst-italic fw-bold">
-                <a href="?action=adminArt"><i class="fas fa-cogs"></i> Administration</a>
-            </nav>
-        <?php endif; ?> 
-        <nav>
-            <?php if( empty($_SESSION['auteur'])): ?>
-                <a href="?action=inscription" class="rounded-pill bg-info p-3 fs-1 fw-bold text-white fst-italic text-decoration-none text-uppercase" style="box-shadow: 2px 2px 2px white;">Inscription</a> 
-                &nbsp;  &nbsp;
-                <a href="?action=connexion" class="rounded-pill bg-success p-3 fs-1 fw-bold text-white fst-italic text-decoration-none text-uppercase" style="box-shadow: 2px 2px 2px white;">Connexion</a>
-            <?php else: ?>
-                <div class="text-end fs-1 fst-italic fw-bold">
-                    <?= "Bonjour " . unserialize($_SESSION['auteur'])->getPrenom() ?>
-                    <a href="?action=deconnexion" class="rounded-pill bg-danger p-2 fs-1 fw-bold text-white fst-italic text-decoration-none text-uppercase ">Déconnexion</a>
-                </div>
-            <?php endif; ?>   
+    <header class="text-white  topnav">
+      
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark p-5 border border-0 border-bottom border-info border-5 mb-2">
+        <div class="container-fluid">
+            <h1 class="text-secondary text-uppercase  fs-1 fst-italic ">
+                <a href="."><i class="fas fa-microphone"></i>Encore un blog</a> 
+            </h1>
+           
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
             
-        </nav>
+        <div class="d-flex">
+                
+            <?php/*if (!empty($_SESSION['auteur'])) : */?>
+                <nav class="btn btn-outline-secondary text-decoration-none  text-uppercase">
+                    <a href="?action=adminArt" class="text-decoration-none"><i class="fas fa-cogs"></i> Administration</a>
+                </nav>
+            <?php/* endif; */?> 
+            &nbsp;  &nbsp;
+            <nav>
+                <?php if (empty($_SESSION['auteur'])): ?>
+                    <a href="?action=inscription" class="btn btn-outline-secondary  text-uppercase" >Inscription</a> 
+                    &nbsp;  &nbsp;
+                    <a href="?action=connexion" class="btn btn-outline-secondary  text-uppercase" >Connexion</a>
+                <?php else: ?>
+                    <div class="text-end ">
+                        <?= "Bonjour " . unserialize($_SESSION['auteur'])->getPrenom() ?>
+                        <a href="?action=deconnexion" class="btn btn-outline-danger text-decoration-none text-uppercase ">Déconnexion</a>
+                    </div>
+                <?php endif; ?>
+                </div>
+           
+        </div>
+</nav>
 
         
     </header>
@@ -68,7 +57,7 @@
         <?= $content?? "contenu vide" ?>
     </main>
 
-    <footer class="py-5 bg-dark border-top border-info border-5  mt-3">
+    <footer class="py-5 bg-dark border-top border-info border-5 mb-0 mt-3">
         <div class="container">
             <p class="m-0 text-center text-uppercase text-white fs-1 fw-bold fst-italic"> &copy; 2020 - 2021 / Blog - M-Wone <?= date("d/m/Y") ?></p>
         </div>
